# navidrome-htpc

./: AGENTS.md  Cargo.toml  README.md  config.toml.example
.hermes/: handover.md
.superpowers/sdd/reports/: task-14-report.md  task-5-report.md
docs/superpowers/plans/: 2026-07-19-navidrome-htpc-implementation.md
docs/superpowers/specs/: 2026-07-19-navidrome-htpc-design.md
src/: app.rs  config.rs  focus.rs  main.rs  state.rs  theme.rs
src/mpv/: events.rs  ipc.rs  mod.rs
src/subsonic/: commands.rs  cover_art.rs  mod.rs  models.rs
src/ui/: album_detail.rs  album_list.rs  artist_detail.rs  artist_list.rs  common.rs  home.rs  menu.rs  mod.rs  now_playing.rs  playlist_detail.rs  playlist_list.rs  search.rs  settings.rs  transport.rs  wizard.rs
