[package]
name = "navidrome-htpc"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[dependencies]
eframe = { version = "0.30", default-features = false, features = ["default_fonts", "wayland", "glow"] }
egui = { version = "0.30", default-features = false, features = ["default_fonts"] }
egui_extras = { version = "0.30", features = ["image"] }
opensubsonic = "0.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
image = "0.25"
crossbeam = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5"
uuid = { version = "1", features = ["v4"] }

[features]
mock-server = []
mock-mpv = []
